# oh-my-somnia

./: .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.somnia/: config.toml
docs/: USAGE.md
docs/superpowers/plans/: 2026-07-07-worktree-monorepo-subdir.md
docs/superpowers/specs/: 2026-07-07-worktree-monorepo-subdir-design.md
src/oh_my_darwin/: __init__.py  agents.py  cli.py  config.py  diagnoser.py  evaluator.py  evolve.py  executor.py  genome.py  history.py  mutator.py  planner.py  sandbox.py
src/oh_my_darwin/seed/: smallest-change-first.md
src/oh_my_somnia/: __init__.py  agents.py  cli.py  config.py  diagnoser.py  evaluator.py  evolve.py  executor.py  genome.py  history.py  mutator.py  planner.py  sandbox.py  selector.py
src/oh_my_somnia/seed/: read-before-write.md  verify-before-done.md
tests/: conftest.py  test_core.py  test_sandbox.py
